Switch reset view button to viewfinder icon

--- a/index.html
+++ b/index.html
@@ -389,7 +389,10 @@
     <div class="diagram-controls">
       <button id="zoomOut" type="button" title="Zoom out" aria-label="Zoom out">-</button>
       <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">+</button>
-      <button id="resetView" type="button"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF202;</span>Reset View</button>
+      <button id="resetView" type="button">
+        <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="film">&#xF114;</span>
+        Reset View
+      </button>
       <button id="gridSnapToggle" type="button" aria-pressed="false">Snap to Grid</button>
     </div>
     <p id="diagramHint" class="diagram-hint"></p>
