Keep filter detail controls hidden in form while rendering in gear list

--- a/index.html
+++ b/index.html
@@ -2556,7 +2556,7 @@
         <label for="filter" id="filterLabel">Filter:</label>
         <select id="filter" name="filter" multiple size="10"></select>
       </div>
-      <div class="form-row" id="filterDetails"></div>
+      <div class="form-row visually-hidden" id="filterDetails" aria-hidden="true"></div>
 
       <h3 id="monitoringHeading">Monitoring</h3>
       <div class="form-row">
