--- a/index.html
+++ b/index.html
@@ -2553,9 +2553,9 @@
         <section class="project-dialog-section" aria-labelledby="lensesHeading">
           <h3 id="lensesHeading" class="project-section-title">Lenses</h3>
           <div class="project-section-content">
-            <div class="form-row">
+            <div class="form-row lens-selector-row">
               <label for="lenses" id="lensesLabel">Lenses:</label>
-              <div class="select-wrapper">
+              <div class="select-wrapper lens-selector">
                 <select id="lenses" name="lenses" multiple size="10" aria-labelledby="lensesLabel"></select>
               </div>
             </div>
