--- a/index.html
+++ b/index.html
@@ -1150,12 +1150,14 @@
             <li>Star frequently used devices to pin them at the top of dropdowns.</li>
             <li>Generate categorized gear lists and printable project overviews with one click.</li>
             <li>Refine runtime estimates with user feedback and a visual weighting dashboard.</li>
+            <li>Use the global search bar to jump straight to features, device selectors or help topics from anywhere.</li>
             <li>Open a searchable help dialog with step-by-step guides and FAQ.</li>
             <li>Switch languages, toggle dark or playful pink themes and work fully offline. Theme settings persist.</li>
             <li>Personalize the interface from Settings—adjust accent color, base font size and typeface, toggle high contrast and upload a custom logo that appears in backups and printable overviews.</li>
             <li>Start fresh at any time with the Factory reset button in Settings. It automatically downloads a backup before removing saved projects, custom devices, favorites and runtime feedback in one step.</li>
             <li>Automatic snapshots save the current project every 10 minutes and hourly full-app backups download timestamped JSON archives so you always have a recovery point.</li>
             <li>Force reload clears cached files and updates the app without deleting saved data.</li>
+            <li>Save automatic gear rules as presets, recover them from background backups and include them in shared project bundles with per-import controls.</li>
             <li>Cameras with both V- and B-Mount plates let you swap battery types; the list updates automatically.</li>
           </ul>
           <div class="help-link-group" aria-label="Jump to key features">
@@ -1556,7 +1558,16 @@
               category shown in the gear list to target the right row.
             </li>
             <li>
-              Rules live in Settings, are included in backups and apply to printable gear lists and exported project bundles.
+              Save frequently used combinations as presets via the <strong>Preset</strong> menu, then switch or delete them as
+              your workflow evolves.
+            </li>
+            <li>
+              Background automatic backups capture rule changes every 10 minutes. Toggle <strong>Show automatic backups</strong>
+              to reveal the list, inspect timestamps and restore a snapshot if something goes wrong.
+            </li>
+            <li>
+              Rules travel with backups and exports. Include them when sharing a project, then decide on import whether to apply
+              the shared rules only to the opened project or add them to all projects.
             </li>
           </ul>
           <div class="help-link-group" aria-label="Automatic gear rule controls">
@@ -1576,6 +1587,16 @@
               href="#settingsDialog"
               data-help-target="#autoGearRulesList"
             >Rules list</a>
+            <a
+              class="help-link button-link"
+              href="#settingsDialog"
+              data-help-target="#autoGearPresetSelect"
+            >Preset menu</a>
+            <a
+              class="help-link button-link"
+              href="#settingsDialog"
+              data-help-target="#autoGearShowBackups"
+            >Show automatic backups</a>
           </div>
         </section>
         <section
@@ -2072,7 +2093,7 @@
                 data-help-target="#shareSetupBtn"
                 data-help-highlight="#setup-manager"
               ><em>Export Project</em></a>
-              to download a JSON file with your selections, project requirements, gear list, runtime feedback and any custom devices. Send the file to collaborators or keep it as a backup, then choose it in the
+              to open the export dialog. Choose a file name and optionally include automatic gear rules before downloading a JSON bundle with your selections, project requirements, gear list, runtime feedback and any custom devices. Send the file to collaborators or keep it as a backup, then choose it in the
               <a
                 class="help-link"
                 href="#setup-manager"
@@ -2086,7 +2107,7 @@
                 data-help-target="#applySharedLinkBtn"
                 data-help-highlight="#setup-manager"
               ><em>Import</em></a>
-              to restore it.
+              to restore it. When the file contains automatic gear rules you'll be asked whether to apply them only to the current project or add them to all projects before continuing.
             </p>
           </details>
           <details
