Use distinct Uicons for import and export actions

--- a/index.html
+++ b/index.html
@@ -198,49 +198,7 @@
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
         <button id="shareSetupBtn">
-          <span class="btn-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <line
-                x1="12"
-                y1="6.75"
-                x2="12"
-                y2="16.25"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <polyline
-                points="8.75 12.75 12 16.25 15.25 12.75"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M4.75 14.5H8.6L10.4 17h8.85L21 14.5"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <rect
-                x="4.75"
-                y="12.5"
-                width="14.5"
-                height="7.25"
-                rx="1.75"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </span>
+          <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF423;</span>
           Export Project
         </button>
         <div id="sharedLinkRow" class="share-import-group">
@@ -254,49 +212,7 @@
             class="visually-hidden"
           />
           <button id="applySharedLinkBtn">
-            <span class="btn-icon icon-glyph icon-svg" aria-hidden="true">
-              <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <line
-                  x1="12"
-                  y1="6.75"
-                  x2="12"
-                  y2="16.25"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <polyline
-                  points="8.75 10.25 12 6.75 15.25 10.25"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M4.75 14.5H8.6L10.4 17h8.85L21 14.5"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <rect
-                  x="4.75"
-                  y="12.5"
-                  width="14.5"
-                  height="7.25"
-                  rx="1.75"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </span>
+            <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF425;</span>
             Import Project
           </button>
         </div>
@@ -807,8 +723,8 @@
     </div>
     <button id="addDeviceBtn">Add</button>
     <button id="cancelEditBtn" class="hidden"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF131;</span>Cancel</button>
-      <button id="exportDataBtn">Export Database</button>
-      <button id="importDataBtn">Import Database</button>
+      <button id="exportDataBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF423;</span>Export Database</button>
+      <button id="importDataBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF425;</span>Import Database</button>
       <input type="file" id="importFileInput" accept=".json" class="hidden" />
       <button id="exportAndRevertBtn">Export and Revert to default Database</button>
     </div>
