Style shared import dialog to match app modal

--- a/index.html
+++ b/index.html
@@ -2370,8 +2370,8 @@
     </form>
   </dialog>
 
-  <dialog id="sharedImportDialog" aria-labelledby="sharedImportDialogHeading">
-    <form id="sharedImportForm" method="dialog">
+  <dialog id="sharedImportDialog" class="app-modal" aria-labelledby="sharedImportDialogHeading" aria-modal="true">
+    <form id="sharedImportForm" method="dialog" class="modal-surface share-import-dialog">
       <h3 id="sharedImportDialogHeading">Automatic gear rules</h3>
       <p id="sharedImportDialogMessage">Choose how to apply the shared automatic gear rules from this project.</p>
       <fieldset id="sharedImportOptions" class="share-import-options">
