--- a/index.html
+++ b/index.html
@@ -418,10 +418,10 @@
     <div id="diagramLegend" class="diagram-legend"></div>
     <div class="diagram-controls">
       <button id="zoomOut" type="button" title="Zoom out" aria-label="Zoom out">
-        <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE9E0;</span>
+        <span class="btn-icon icon-glyph icon-text ubuntu-math-icon" aria-hidden="true">−</span>
       </button>
       <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">
-        <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE02E;</span>
+        <span class="btn-icon icon-glyph icon-text ubuntu-math-icon" aria-hidden="true">+</span>
       </button>
       <button id="resetView" type="button">
         <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xEB6D;</span>
@@ -2719,21 +2719,21 @@
               <label id="crewLabel">Crew:</label>
               <div id="crewContainer" aria-labelledby="crewLabel"></div>
               <button type="button" id="addPersonBtn">
-                <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE02E;</span>
+                <span class="btn-icon icon-glyph icon-text ubuntu-math-icon" aria-hidden="true">+</span>
               </button>
             </div>
             <div class="form-row" id="prepListRow">
               <label id="prepLabel">Prep Days:</label>
               <div id="prepContainer"></div>
               <button type="button" id="addPrepBtn">
-                <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE02E;</span>
+                <span class="btn-icon icon-glyph icon-text ubuntu-math-icon" aria-hidden="true">+</span>
               </button>
             </div>
             <div class="form-row" id="shootListRow">
               <label id="shootLabel">Shooting Days:</label>
               <div id="shootContainer"></div>
               <button type="button" id="addShootBtn">
-                <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE02E;</span>
+                <span class="btn-icon icon-glyph icon-text ubuntu-math-icon" aria-hidden="true">+</span>
               </button>
             </div>
           </div>
